# audacious-plugins

./: .gitignore  .gitmodules  .hgignore  .travis.yml  AUTHORS  COPYING  ChangeLog  GIT-Access  Makefile  Mercurial-Access  NEWS  README.icecast  README.md  acinclude.m4  buildsys.mk.in  config.h.meson  configure.ac  extra.mk.in  meson.build  meson_options.txt
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  af.po  ar.po  audacious-plugins.pot  be.po  bg.po  ca.po  cmn.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  es_AR.po  es_MX.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  hu.po  id_ID.po  it.po  ja.po  ka.po  ko.po  ky.po  lt.po  lv.po  meson.build  ml_IN.po  (+23 more)
src/: Makefile  config.h.meson  meson.build
src/CoreAudio/: Makefile  about.c  audio.c  configure.c  convert.c  coreaudio.c  coreaudio.h  dbaudiolib.h  dbconvert.c  init.c  mixer.c
src/OSS/: Makefile  OSS.c  OSS.h  about.c  audio.c  configure.c  init.c  mixer.c
src/OSS4/: Makefile  OSS4.c  OSS4.h  about.c  audio.c  configure.c  convert.c  init.c
src/a52dec/: Makefile  a52dec.c  a52dec.h
src/aac/: Makefile  aac.cc  aac_utils.c  itunes-cover.c  itunes-cover.cc  libmp4.c  libmp4.cc  meson.build  mp4_utils.c  mp4_utils.cc  tagging.h  tagging_mp4.c  xmms-id3.h
src/aac-raw/: Makefile  aac.c  aac.cc
src/adplug/: Makefile  adplug-xmms.cc  adplug-xmms.h  meson.build  plugin.c  plugin.cc
src/alac/: Makefile  alac.c  demux.c  demux.h  plugin.c  stream.c  stream.h
src/alarm/: Makefile  alarm.c  alarm.cc  alarm.h  callbacks.h  interface.c  interface.cc  interface.h  meson.build  support.h
src/albumart/: Makefile  albumart.c  albumart.cc  meson.build
src/albumart-qt/: Makefile  albumart.cc  meson.build
src/alsa/: Makefile  about.c  alsa.c  alsa.cc  alsa.h  audio.c  config.c  config.cc  configure.c  init.c  meson.build  plugin.c  plugin.cc
src/alsa-gapless/: Makefile  alsa.c  alsa.h  config.c  plugin.c
src/alsa-ng/: Makefile  TODO  alsa-configure.c  alsa-core.c  alsa-debug.h  alsa-ringbuffer.c  alsa-ringbuffer.h  alsa-stdinc.h  alsa-types.h  alsa-util.c
src/amidi-plug/: Makefile  amidi-plug.c  amidi-plug.cc  amidi-plug.h  amidi-plug.logo.xpm  i_backend.c  i_backend.h  i_common.h  i_configure-alsa.c  i_configure-alsa.h  i_configure-ap.c  i_configure-ap.h  i_configure-dummy.c  i_configure-fluidsynth.c  i_configure-fluidsynth.cc  i_configure-fluidsynth.h  i_configure-timidity.c  i_configure-timidity.h  i_configure.c  i_configure.cc  i_configure.h  i_configure_file.h  i_configure_private.h  i_fileinfo.c  i_fileinfo.cc  i_fileinfo.h  i_midi.c  i_midi.cc  i_midi.h  i_midievent.h  i_utils.c  i_utils.cc  i_utils.h  i_vfslayer.c  i_vfslayer.h
src/amidiplug/: Makefile  amidi-plug.cc  amidi-plug.midiicon.xpm  i_backend.h  i_configure-fluidsynth.cc  i_configure-fluidsynth.h  i_configure.cc  i_configure.h  i_fileinfo.cc  i_fileinfo.h  i_midi.cc  i_midi.h  meson.build
src/ampache/: Makefile  ampache.cc  meson.build
src/aosd/: Makefile  aosd.c  aosd.cc  aosd.h  aosd_cfg.c  aosd_cfg.cc  aosd_cfg.h  aosd_common.h  aosd_osd.c  aosd_osd.cc  aosd_osd.h  aosd_style.c  aosd_style.cc  aosd_style.h  aosd_style_private.h  aosd_trigger.c  aosd_trigger.cc  aosd_trigger.h  aosd_trigger_private.h  aosd_ui.c  aosd_ui.c.old  aosd_ui.cc  aosd_ui.h  ghosd-internal.h  ghosd-license  ghosd-main.c  ghosd-text.c  ghosd-text.h  ghosd.c  ghosd.h  meson.build
src/arts/: Makefile  arts.c  arts.h  audio.c  configure.c  convert.c
src/asx/: Makefile  asx.c  asx.cc  asxv3.c  asxv3.h  meson.build  util.c
src/asx3/: Makefile  asx3.c  asx3.cc  meson.build
src/asxv3/: Makefile  asxv3.c
src/audiocompress/: Makefile  audacious-glue.c  audiocompress_config.h  compress.c
src/audpl/: Makefile  audpl.c  audpl.cc  meson.build
src/background_music/: BackgroundMusicEngine.cc  BackgroundMusicEngine.h  CircularBuffer.h  ConfigValue.h  Delay.h  Detection.h  DoubleIntegrationTimeRmsDetection.h  FrameBasedEffectPlugin.h  FrameBasedPlugin.cc  FrameBasedPlugin.h  Integrator.cc  Integrator.h  Loudness.cc  Loudness.h  LoudnessFrameProcessor.h  Makefile  background_music.cc  basic_config.h  meson.build  utils.h
src/bitcrusher/: Makefile  bitcrusher.cc  meson.build
src/bluetooth/: Makefile  agent.c  agent.h  auth-agent-glue.h  bluetooth.c  bluetooth.h  dbus-glue.h  gui.c  gui.h  marshal.c  marshal.h  passkey-agent-glue.h  scan_gui.c  scan_gui.h
src/blur_scope/: Makefile  blur_scope.c  blur_scope.cc  blur_scope.h  config.c  meson.build
src/blur_scope-qt/: Makefile  blur_scope.cc  meson.build
src/bs2b/: Makefile  meson.build  plugin.c  plugin.cc
src/cairo-spectrum/: Makefile  cairo-spectrum.c  cairo-spectrum.cc  meson.build
src/cd-menu-items/: Makefile  cd-menu-items.c  cd-menu-items.cc  meson.build
src/cdaudio/: Makefile  cdaudio-ng.cc  cdaudio.c  cdaudio.h  cddb.c  cdinfo.c  cdinfo.h  configure.c  meson.build
src/cdaudio-ng/: Makefile  Makefile.WRONG  cdaudio-ng.c  cdaudio-ng.cc  cdaudio-ng.h  configure.c  configure.h
src/compressor/: Makefile  compressor.c  compressor.cc  compressor.h  meson.build  plugin.c  plugin.cc
src/console/: Audacious_Config.cxx  Audacious_Config.h  Audacious_Driver.cc  Audacious_Driver.cxx  Ay_Apu.cxx  Ay_Apu.h  Ay_Cpu.cxx  Ay_Cpu.h  Ay_Emu.cxx  Ay_Emu.h  Blip_Buffer.cxx  Blip_Buffer.h  Classic_Emu.cc  Classic_Emu.cxx  Classic_Emu.h  Data_Reader.cxx  Data_Reader.h  Dual_Resampler.cxx  Dual_Resampler.h  Effects_Buffer.cxx  Effects_Buffer.h  Fir_Resampler.cxx  Fir_Resampler.h  Gb_Apu.cc  Gb_Apu.h  Gb_Cpu.cxx  Gb_Cpu.h  Gb_Oscs.cxx  Gb_Oscs.h  Gbs_Emu.cxx  Gbs_Emu.h  Gme_File.cxx  Gme_File.h  Gym_Emu.cxx  Gym_Emu.h  Gzip_File.h  Gzip_Reader.cxx  Gzip_Reader.h  Hes_Apu.cc  Hes_Apu.cxx  (+110 more)
src/coreaudio/: Makefile  audiodevice.h  audiodevice.mm  coreaudio.cc  coreaudio.h  meson.build  plugin.cc
src/crossfade/: Makefile  TODO  callbacks.c  callbacks.h  cfgutil.c  cfgutil.h  configure.c  configure.h  convert.c  convert.h  crossfade.c  crossfade.cc  crossfade.h  debug.c  debug.h  format.c  format.h  interface-2.0.c  meson.build  monitor.c  monitor.h  player.c  player.h  (+5 more)
(+2213 files in other folders)
